--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -16,14 +16,26 @@
         android:orientation="vertical"
         android:padding="@dimen/default_padding"
         >
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/background"
+            android:layout_marginBottom="@dimen/default_padding"
+            android:focusable="true"
+            android:focusableInTouchMode="true"
+            app:queryHint="Введите имя или фамилию..."
+            android:onClick="@{() -> viewModel.onSearchClickListener()}"
+/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/contact_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            app:listData="@{viewModel.contactsList}"
+            app:listData="@{viewModel.displayedContactsList}"
             tools:itemCount="4"
-            tools:listitem="@layout/contact_item" />
+            tools:listitem="@layout/contact_item"
+            />
     </LinearLayout>
 </layout>
